# nisprog

./: .gitignore  .gitmodules  .uncrustify.cfg  CMakeLists.txt  README  README.md  SubaruSIDs.txt  USING.txt  flashdefs.h  nis_backend.c  nis_backend.h  nisprog.c  nisprog.h  nisprog.ini  np_backend.c  np_backend.h  np_cli.c  np_conf.h.in  npk_backend.c  npk_backend.h  scantool_bits.c  ssm_backend.c  ssm_backend.h  ssmprog.ini  stypes.h
.github/: FUNDING.yml
cmake/: gitversion.cmake  override_c.cmake
npkern/: iso_cmds.h  npk_errcodes.h
